@@ -1,9 +1,10 @@
 /**
- * Copyright (c) 2015 itemis AG (http://www.itemis.eu) and others.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
- * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * Copyright (c) 2015, 2020 itemis AG (http://www.itemis.eu) and others.
+ * This program and the accompanying materials are made available under the
+ * terms of the Eclipse Public License 2.0 which is available at
+ * http://www.eclipse.org/legal/epl-2.0.
+ * 
+ * SPDX-License-Identifier: EPL-2.0
  */
 package org.eclipse.xtext.xtext.wizard;
 
@@ -11,34 +12,20 @@ import com.google.common.base.Charsets;
 import com.google.common.base.Objects;
 import com.google.common.collect.Iterables;
 import com.google.common.io.Resources;
-import java.net.URL;
 import java.nio.charset.Charset;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Set;
 import org.eclipse.xtend.lib.annotations.FinalFieldsConstructor;
 import org.eclipse.xtend2.lib.StringConcatenation;
-import org.eclipse.xtext.util.JavaVersion;
 import org.eclipse.xtext.util.XtextVersion;
 import org.eclipse.xtext.xbase.lib.CollectionLiterals;
 import org.eclipse.xtext.xbase.lib.Exceptions;
 import org.eclipse.xtext.xbase.lib.Functions.Function1;
 import org.eclipse.xtext.xbase.lib.IterableExtensions;
+import org.eclipse.xtext.xbase.lib.ListExtensions;
 import org.eclipse.xtext.xbase.lib.ObjectExtensions;
 import org.eclipse.xtext.xbase.lib.Procedures.Procedure1;
-import org.eclipse.xtext.xtext.wizard.AbstractFile;
-import org.eclipse.xtext.xtext.wizard.BinaryFile;
-import org.eclipse.xtext.xtext.wizard.GradleBuildFile;
-import org.eclipse.xtext.xtext.wizard.IntellijProjectDescriptor;
-import org.eclipse.xtext.xtext.wizard.Outlet;
-import org.eclipse.xtext.xtext.wizard.P2RepositoryProject;
-import org.eclipse.xtext.xtext.wizard.PlainTextFile;
-import org.eclipse.xtext.xtext.wizard.PomFile;
-import org.eclipse.xtext.xtext.wizard.ProjectDescriptor;
-import org.eclipse.xtext.xtext.wizard.ProjectLayout;
-import org.eclipse.xtext.xtext.wizard.SourceLayout;
-import org.eclipse.xtext.xtext.wizard.TargetPlatformProject;
-import org.eclipse.xtext.xtext.wizard.WizardConfiguration;
 
 @FinalFieldsConstructor
 @SuppressWarnings("all")
@@ -66,8 +53,7 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
   
   @Override
   public String getLocation() {
-    WizardConfiguration _config = this.getConfig();
-    String _rootLocation = _config.getRootLocation();
+    String _rootLocation = this.getConfig().getRootLocation();
     String _plus = (_rootLocation + "/");
     String _name = this.getName();
     return (_plus + _name);
@@ -93,24 +79,20 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
     final ArrayList<AbstractFile> files = CollectionLiterals.<AbstractFile>newArrayList();
     Iterable<? extends AbstractFile> _files = super.getFiles();
     Iterables.<AbstractFile>addAll(files, _files);
-    WizardConfiguration _config = this.getConfig();
-    boolean _needsGradleBuild = _config.needsGradleBuild();
+    boolean _needsGradleBuild = this.getConfig().needsGradleBuild();
     if (_needsGradleBuild) {
       PlainTextFile _file = this.file(Outlet.ROOT, "settings.gradle", this.settingsGradle());
       files.add(_file);
       PlainTextFile _file_1 = this.file(Outlet.ROOT, "gradle/source-layout.gradle", this.sourceLayoutGradle());
       files.add(_file_1);
-      PlainTextFile _file_2 = this.file(Outlet.ROOT, "gradle/maven-deployment.gradle", this.mavenDeploymentGradle());
-      files.add(_file_2);
-      WizardConfiguration _config_1 = this.getConfig();
-      boolean _isNeedsGradleWrapper = _config_1.isNeedsGradleWrapper();
+      boolean _isNeedsGradleWrapper = this.getConfig().isNeedsGradleWrapper();
       if (_isNeedsGradleWrapper) {
-        PlainTextFile _file_3 = this.file(Outlet.ROOT, "gradlew", this.loadResource("gradlew/gradlew"), true);
+        PlainTextFile _file_2 = this.file(Outlet.ROOT, "gradlew", this.loadResource("gradlew/gradlew"), true);
+        files.add(_file_2);
+        PlainTextFile _file_3 = this.file(Outlet.ROOT, "gradlew.bat", this.loadResource("gradlew/gradlew.bat"));
         files.add(_file_3);
-        PlainTextFile _file_4 = this.file(Outlet.ROOT, "gradlew.bat", this.loadResource("gradlew/gradlew.bat"));
+        PlainTextFile _file_4 = this.file(Outlet.ROOT, "gradle/wrapper/gradle-wrapper.properties", this.loadResource("gradlew/gradle-wrapper.properties"));
         files.add(_file_4);
-        PlainTextFile _file_5 = this.file(Outlet.ROOT, "gradle/wrapper/gradle-wrapper.properties", this.loadResource("gradlew/gradle-wrapper.properties"));
-        files.add(_file_5);
         BinaryFile _binaryFile = this.binaryFile(Outlet.ROOT, "gradle/wrapper/gradle-wrapper.jar", this.getClass().getClassLoader().getResource("gradlew/gradle-wrapper.jar"));
         files.add(_binaryFile);
       }
@@ -119,17 +101,16 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
   }
   
   public String getJavaVersion() {
-    WizardConfiguration _config = this.getConfig();
-    JavaVersion _javaVersion = _config.getJavaVersion();
-    return _javaVersion.getQualifier();
+    return this.getConfig().getJavaVersion().getQualifier();
+  }
+  
+  public String getTychoVersion() {
+    return "1.7.0";
   }
   
   private CharSequence loadResource(final String resourcePath) {
     try {
-      Class<? extends ParentProjectDescriptor> _class = this.getClass();
-      ClassLoader _classLoader = _class.getClassLoader();
-      URL _resource = _classLoader.getResource(resourcePath);
-      return Resources.toString(_resource, Charsets.ISO_8859_1);
+      return Resources.toString(this.getClass().getClassLoader().getResource(resourcePath), Charsets.ISO_8859_1);
     } catch (Throwable _e) {
       throw Exceptions.sneakyThrow(_e);
     }
@@ -146,7 +127,7 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
       _builder.append("repositories {");
       _builder.newLine();
       _builder.append("\t\t");
-      _builder.append("jcenter()");
+      _builder.append("mavenCentral()");
       _builder.newLine();
       _builder.append("\t");
       _builder.append("}");
@@ -156,27 +137,10 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
       _builder.newLine();
       _builder.append("\t\t");
       _builder.append("classpath \'org.xtext:xtext-gradle-plugin:");
-      WizardConfiguration _config = this.getConfig();
-      XtextVersion _xtextVersion = _config.getXtextVersion();
-      String _xtextGradlePluginVersion = _xtextVersion.getXtextGradlePluginVersion();
+      String _xtextGradlePluginVersion = this.getConfig().getXtextVersion().getXtextGradlePluginVersion();
       _builder.append(_xtextGradlePluginVersion, "\t\t");
       _builder.append("\'");
       _builder.newLineIfNotEmpty();
-      {
-        WizardConfiguration _config_1 = this.getConfig();
-        IntellijProjectDescriptor _intellijProject = _config_1.getIntellijProject();
-        boolean _isEnabled = _intellijProject.isEnabled();
-        if (_isEnabled) {
-          _builder.append("\t\t");
-          _builder.append("classpath \'org.xtext:xtext-idea-gradle-plugin:");
-          WizardConfiguration _config_2 = this.getConfig();
-          XtextVersion _xtextVersion_1 = _config_2.getXtextVersion();
-          String _xtextGradlePluginVersion_1 = _xtextVersion_1.getXtextGradlePluginVersion();
-          _builder.append(_xtextGradlePluginVersion_1, "\t\t");
-          _builder.append("\'");
-          _builder.newLineIfNotEmpty();
-        }
-      }
       _builder.append("\t");
       _builder.append("}");
       _builder.newLine();
@@ -187,21 +151,18 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
       _builder.newLine();
       _builder.append("\t");
       _builder.append("ext.xtextVersion = \'");
-      WizardConfiguration _config_3 = this.getConfig();
-      XtextVersion _xtextVersion_2 = _config_3.getXtextVersion();
-      _builder.append(_xtextVersion_2, "\t");
+      XtextVersion _xtextVersion = this.getConfig().getXtextVersion();
+      _builder.append(_xtextVersion, "\t");
       _builder.append("\'");
       _builder.newLineIfNotEmpty();
       _builder.append("\t");
       _builder.append("repositories {");
       _builder.newLine();
       _builder.append("\t\t");
-      _builder.append("jcenter()");
+      _builder.append("mavenCentral()");
       _builder.newLine();
       {
-        WizardConfiguration _config_4 = this.getConfig();
-        XtextVersion _xtextVersion_3 = _config_4.getXtextVersion();
-        boolean _isSnapshot = _xtextVersion_3.isSnapshot();
+        boolean _isSnapshot = this.getConfig().getXtextVersion().isSnapshot();
         if (_isSnapshot) {
           _builder.append("\t\t");
           _builder.append("maven {");
@@ -224,26 +185,29 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
       _builder.append("apply plugin: \'java\'");
       _builder.newLine();
       _builder.append("\t");
+      _builder.append("dependencies {");
+      _builder.newLine();
+      _builder.append("\t\t");
+      _builder.append("compile platform(\"org.eclipse.xtext:xtext-dev-bom:${xtextVersion}\")");
+      _builder.newLine();
+      _builder.append("\t");
+      _builder.append("}");
+      _builder.newLine();
+      _builder.newLine();
+      _builder.append("\t");
       _builder.append("apply plugin: \'org.xtext.xtend\'");
       _builder.newLine();
       _builder.append("\t");
       _builder.append("apply from: \"${rootDir}/gradle/source-layout.gradle\"");
       _builder.newLine();
       _builder.append("\t");
-      _builder.append("apply from: \"${rootDir}/gradle/maven-deployment.gradle\"");
-      _builder.newLine();
-      _builder.append("\t");
       _builder.append("apply plugin: \'eclipse\'");
-      _builder.newLine();
-      _builder.append("\t");
-      _builder.append("apply plugin: \'idea\'");
       _builder.newLine();
       _builder.append("\t");
       _builder.newLine();
       _builder.append("\t");
       _builder.append("group = \'");
-      WizardConfiguration _config_5 = this.getConfig();
-      String _baseName = _config_5.getBaseName();
+      String _baseName = this.getConfig().getBaseName();
       _builder.append(_baseName, "\t");
       _builder.append("\'");
       _builder.newLineIfNotEmpty();
@@ -285,16 +249,13 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
   public CharSequence settingsGradle() {
     StringConcatenation _builder = new StringConcatenation();
     {
-      WizardConfiguration _config = this.getConfig();
-      Set<ProjectDescriptor> _enabledProjects = _config.getEnabledProjects();
       final Function1<ProjectDescriptor, Boolean> _function = (ProjectDescriptor it) -> {
         return Boolean.valueOf(((!Objects.equal(it, this)) && it.isPartOfGradleBuild()));
       };
-      Iterable<ProjectDescriptor> _filter = IterableExtensions.<ProjectDescriptor>filter(_enabledProjects, _function);
+      Iterable<ProjectDescriptor> _filter = IterableExtensions.<ProjectDescriptor>filter(this.getConfig().getEnabledProjects(), _function);
       for(final ProjectDescriptor p : _filter) {
         {
-          WizardConfiguration _config_1 = this.getConfig();
-          ProjectLayout _projectLayout = _config_1.getProjectLayout();
+          ProjectLayout _projectLayout = this.getConfig().getProjectLayout();
           boolean _equals = Objects.equal(_projectLayout, ProjectLayout.FLAT);
           if (_equals) {
             _builder.append("includeFlat");
@@ -315,8 +276,7 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
   public CharSequence sourceLayoutGradle() {
     StringConcatenation _builder = new StringConcatenation();
     {
-      WizardConfiguration _config = this.getConfig();
-      SourceLayout _sourceLayout = _config.getSourceLayout();
+      SourceLayout _sourceLayout = this.getConfig().getSourceLayout();
       boolean _equals = Objects.equal(_sourceLayout, SourceLayout.PLAIN);
       if (_equals) {
         _builder.append("if (name.endsWith(\".tests\")) {");
@@ -425,7 +385,7 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
         _builder.append("sourceSets.all {");
         _builder.newLine();
         _builder.append("\t");
-        _builder.append("resources.exclude \'**/*.g\', \'**/*.xtext\', \'**/*.mwe2\', \'**/*.xtend\', \'**/*._trace\'");
+        _builder.append("resources.exclude \'**/*.g\', \'**/*.mwe2\', \'**/*.xtend\', \'**/*._trace\'");
         _builder.newLine();
         _builder.append("}");
         _builder.newLine();
@@ -508,6 +468,22 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
     _builder.append("\t");
     _builder.append("}");
     _builder.newLine();
+    {
+      SourceLayout _sourceLayout_1 = this.getConfig().getSourceLayout();
+      boolean _notEquals = (!Objects.equal(_sourceLayout_1, SourceLayout.PLAIN));
+      if (_notEquals) {
+        _builder.append("\t");
+        _builder.append("from(sourceSets.main.allSource) {");
+        _builder.newLine();
+        _builder.append("\t");
+        _builder.append("\t");
+        _builder.append("include \'**/*.xtext\'");
+        _builder.newLine();
+        _builder.append("\t");
+        _builder.append("}");
+        _builder.newLine();
+      }
+    }
     _builder.append("\t");
     _builder.append("manifest {");
     _builder.newLine();
@@ -530,50 +506,12 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
     _builder.newLineIfNotEmpty();
     _builder.append("}");
     _builder.newLine();
-    _builder.newLine();
-    _builder.append("plugins.withId(\'org.xtext.idea-plugin\') {");
-    _builder.newLine();
-    _builder.append("\t");
-    _builder.append("assembleSandbox.metaInf.from(\'");
-    String _sourceFolder_21 = this.sourceFolder(Outlet.META_INF);
-    _builder.append(_sourceFolder_21, "\t");
-    _builder.append("\')");
-    _builder.newLineIfNotEmpty();
-    _builder.append("}");
-    _builder.newLine();
     return _builder;
   }
   
+  @Deprecated
   public CharSequence mavenDeploymentGradle() {
-    StringConcatenation _builder = new StringConcatenation();
-    _builder.append("//see https://docs.gradle.org/current/userguide/maven_plugin.html");
-    _builder.newLine();
-    _builder.append("apply plugin: \'maven\'");
-    _builder.newLine();
-    _builder.newLine();
-    _builder.append("uploadArchives {");
-    _builder.newLine();
-    _builder.append("\t");
-    _builder.append("repositories {");
-    _builder.newLine();
-    _builder.append("\t\t");
-    _builder.append("mavenDeployer {");
-    _builder.newLine();
-    _builder.append("\t\t\t");
-    _builder.append("repository(url: \"file://${buildDir}/localRepo\")");
-    _builder.newLine();
-    _builder.append("\t\t\t");
-    _builder.append("snapshotRepository(url: \"file://${buildDir}/localRepo\")");
-    _builder.newLine();
-    _builder.append("\t\t");
-    _builder.append("}");
-    _builder.newLine();
-    _builder.append("\t");
-    _builder.append("}");
-    _builder.newLine();
-    _builder.append("}");
-    _builder.newLine();
-    return _builder;
+    throw new UnsupportedOperationException("Removed with 2.17");
   }
   
   @Override
@@ -584,26 +522,26 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
       StringConcatenation _builder = new StringConcatenation();
       _builder.append("<properties>");
       _builder.newLine();
-      {
-        WizardConfiguration _config = this.getConfig();
-        boolean _needsTychoBuild = _config.needsTychoBuild();
-        if (_needsTychoBuild) {
-          _builder.append("\t");
-          _builder.append("<tycho-version>0.25.0</tycho-version>");
-          _builder.newLine();
-        }
-      }
       _builder.append("\t");
       _builder.append("<xtextVersion>");
-      WizardConfiguration _config_1 = this.getConfig();
-      XtextVersion _xtextVersion = _config_1.getXtextVersion();
+      XtextVersion _xtextVersion = this.getConfig().getXtextVersion();
       _builder.append(_xtextVersion, "\t");
       _builder.append("</xtextVersion>");
       _builder.newLineIfNotEmpty();
+      {
+        boolean _needsTychoBuild = this.getConfig().needsTychoBuild();
+        if (_needsTychoBuild) {
+          _builder.append("\t");
+          _builder.append("<mwe2Version>");
+          String _mweVersion = this.getConfig().getXtextVersion().getMweVersion();
+          _builder.append(_mweVersion, "\t");
+          _builder.append("</mwe2Version>");
+          _builder.newLineIfNotEmpty();
+        }
+      }
       _builder.append("\t");
       _builder.append("<project.build.sourceEncoding>");
-      WizardConfiguration _config_2 = this.getConfig();
-      Charset _encoding = _config_2.getEncoding();
+      Charset _encoding = this.getConfig().getEncoding();
       _builder.append(_encoding, "\t");
       _builder.append("</project.build.sourceEncoding>");
       _builder.newLineIfNotEmpty();
@@ -619,23 +557,49 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
       _builder.append(_javaVersion_1, "\t");
       _builder.append("</maven.compiler.target>");
       _builder.newLineIfNotEmpty();
+      {
+        boolean _needsTychoBuild_1 = this.getConfig().needsTychoBuild();
+        if (_needsTychoBuild_1) {
+          _builder.append("\t");
+          _builder.append("<!-- Tycho settings -->");
+          _builder.newLine();
+          _builder.append("\t");
+          _builder.append("<tycho-version>");
+          String _tychoVersion = this.getTychoVersion();
+          _builder.append(_tychoVersion, "\t");
+          _builder.append("</tycho-version>");
+          _builder.newLineIfNotEmpty();
+          _builder.append("\t");
+          _builder.append("<!-- Define overridable properties for tycho-surefire-plugin -->");
+          _builder.newLine();
+          _builder.append("\t");
+          _builder.append("<platformSystemProperties></platformSystemProperties>");
+          _builder.newLine();
+          _builder.append("\t");
+          _builder.append("<moduleProperties></moduleProperties>");
+          _builder.newLine();
+          _builder.append("\t");
+          _builder.append("<systemProperties></systemProperties>");
+          _builder.newLine();
+          _builder.append("\t");
+          _builder.append("<additionalTestArguments></additionalTestArguments>");
+          _builder.newLine();
+        }
+      }
       _builder.append("</properties>");
       _builder.newLine();
       _builder.append("<modules>");
       _builder.newLine();
       {
-        WizardConfiguration _config_3 = this.getConfig();
-        Set<ProjectDescriptor> _enabledProjects = _config_3.getEnabledProjects();
         final Function1<ProjectDescriptor, Boolean> _function_1 = (ProjectDescriptor it_1) -> {
           return Boolean.valueOf(((!Objects.equal(it_1, this)) && it_1.isPartOfMavenBuild()));
         };
-        Iterable<ProjectDescriptor> _filter = IterableExtensions.<ProjectDescriptor>filter(_enabledProjects, _function_1);
+        Iterable<ProjectDescriptor> _filter = IterableExtensions.<ProjectDescriptor>filter(this.getConfig().getEnabledProjects(), _function_1);
         for(final ProjectDescriptor p : _filter) {
           _builder.append("\t");
           _builder.append("<module>");
           {
-            WizardConfiguration _config_4 = this.getConfig();
-            ProjectLayout _projectLayout = _config_4.getProjectLayout();
+            ProjectLayout _projectLayout = this.getConfig().getProjectLayout();
             boolean _equals = Objects.equal(_projectLayout, ProjectLayout.FLAT);
             if (_equals) {
               _builder.append("../");
@@ -649,12 +613,42 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
       }
       _builder.append("</modules>");
       _builder.newLine();
+      _builder.append("<dependencyManagement>");
+      _builder.newLine();
+      _builder.append("\t");
+      _builder.append("<dependencies>");
+      _builder.newLine();
+      _builder.append("\t\t");
+      _builder.append("<dependency>");
+      _builder.newLine();
+      _builder.append("\t\t\t");
+      _builder.append("<groupId>org.eclipse.xtext</groupId>");
+      _builder.newLine();
+      _builder.append("\t\t\t");
+      _builder.append("<artifactId>xtext-dev-bom</artifactId>");
+      _builder.newLine();
+      _builder.append("\t\t\t");
+      _builder.append("<version>${xtextVersion}</version>");
+      _builder.newLine();
+      _builder.append("\t\t\t");
+      _builder.append("<type>pom</type>");
+      _builder.newLine();
+      _builder.append("\t\t\t");
+      _builder.append("<scope>import</scope>");
+      _builder.newLine();
+      _builder.append("\t\t");
+      _builder.append("</dependency>");
+      _builder.newLine();
+      _builder.append("\t");
+      _builder.append("</dependencies>");
+      _builder.newLine();
+      _builder.append("</dependencyManagement>");
+      _builder.newLine();
       _builder.append("<build>");
       _builder.newLine();
       {
-        WizardConfiguration _config_5 = this.getConfig();
-        boolean _needsTychoBuild_1 = _config_5.needsTychoBuild();
-        if (_needsTychoBuild_1) {
+        boolean _needsTychoBuild_2 = this.getConfig().needsTychoBuild();
+        if (_needsTychoBuild_2) {
           _builder.append("\t");
           _builder.append("<plugins>");
           _builder.newLine();
@@ -683,9 +677,7 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
           _builder.append("</plugin>");
           _builder.newLine();
           {
-            WizardConfiguration _config_6 = this.getConfig();
-            P2RepositoryProject _p2Project = _config_6.getP2Project();
-            boolean _isEnabled = _p2Project.isEnabled();
+            boolean _isEnabled = this.getConfig().getP2Project().isEnabled();
             if (_isEnabled) {
               _builder.append("\t");
               _builder.append("\t");
@@ -919,17 +911,14 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
           _builder.append("\t");
           _builder.append("\t\t\t\t\t");
           _builder.append("<groupId>");
-          WizardConfiguration _config_7 = this.getConfig();
-          String _baseName = _config_7.getBaseName();
+          String _baseName = this.getConfig().getBaseName();
           _builder.append(_baseName, "\t\t\t\t\t\t");
           _builder.append("</groupId>");
           _builder.newLineIfNotEmpty();
           _builder.append("\t");
           _builder.append("\t\t\t\t\t");
           _builder.append("<artifactId>");
-          WizardConfiguration _config_8 = this.getConfig();
-          TargetPlatformProject _targetPlatformProject = _config_8.getTargetPlatformProject();
-          String _name_1 = _targetPlatformProject.getName();
+          String _name_1 = this.getConfig().getTargetPlatformProject().getName();
           _builder.append(_name_1, "\t\t\t\t\t\t");
           _builder.append("</artifactId>");
           _builder.newLineIfNotEmpty();
@@ -1014,6 +1003,74 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
           _builder.append("</environments>");
           _builder.newLine();
           _builder.append("\t");
+          _builder.append("\t\t\t");
+          _builder.append("<dependency-resolution>");
+          _builder.newLine();
+          _builder.append("\t");
+          _builder.append("\t\t\t\t");
+          _builder.append("<extraRequirements>");
+          _builder.newLine();
+          _builder.append("\t");
+          _builder.append("\t\t\t\t\t");
+          _builder.append("<requirement>");
+          _builder.newLine();
+          _builder.append("\t");
+          _builder.append("\t\t\t\t\t\t");
+          _builder.append("<type>eclipse-plugin</type>");
+          _builder.newLine();
+          _builder.append("\t");
+          _builder.append("\t\t\t\t\t\t");
+          _builder.append("<id>org.eclipse.xtext.logging</id>");
+          _builder.newLine();
+          _builder.append("\t");
+          _builder.append("\t\t\t\t\t\t");
+          _builder.append("<versionRange>1.2.15</versionRange>");
+          _builder.newLine();
+          _builder.append("\t");
+          _builder.append("\t\t\t\t\t");
+          _builder.append("</requirement>");
+          _builder.newLine();
+          _builder.append("\t");
+          _builder.append("\t\t\t\t\t");
+          _builder.append("<!-- to get the org.eclipse.osgi.compatibility.state plugin if the target ");
+          _builder.newLine();
+          _builder.append("\t");
+          _builder.append("\t\t\t\t\t\t");
+          _builder.append("platform is Luna or later. (backward compatible with kepler and previous ");
+          _builder.newLine();
+          _builder.append("\t");
+          _builder.append("\t\t\t\t\t\t");
+          _builder.append("versions) see https://bugs.eclipse.org/bugs/show_bug.cgi?id=492149 -->");
+          _builder.newLine();
+          _builder.append("\t");
+          _builder.append("\t\t\t\t\t");
+          _builder.append("<requirement>");
+          _builder.newLine();
+          _builder.append("\t");
+          _builder.append("\t\t\t\t\t\t");
+          _builder.append("<type>eclipse-feature</type>");
+          _builder.newLine();
+          _builder.append("\t");
+          _builder.append("\t\t\t\t\t\t");
+          _builder.append("<id>org.eclipse.rcp</id>");
+          _builder.newLine();
+          _builder.append("\t");
+          _builder.append("\t\t\t\t\t\t");
+          _builder.append("<versionRange>0.0.0</versionRange>");
+          _builder.newLine();
+          _builder.append("\t");
+          _builder.append("\t\t\t\t\t");
+          _builder.append("</requirement>");
+          _builder.newLine();
+          _builder.append("\t");
+          _builder.append("\t\t\t\t");
+          _builder.append("</extraRequirements>");
+          _builder.newLine();
+          _builder.append("\t");
+          _builder.append("\t\t\t");
+          _builder.append("</dependency-resolution>");
+          _builder.newLine();
+          _builder.append("\t");
           _builder.append("\t\t");
           _builder.append("</configuration>");
           _builder.newLine();
@@ -1057,7 +1114,13 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
       _builder.append("<goal>compile</goal>");
       _builder.newLine();
       _builder.append("\t\t\t\t\t\t\t");
+      _builder.append("<goal>xtend-install-debug-info</goal>");
+      _builder.newLine();
+      _builder.append("\t\t\t\t\t\t\t");
       _builder.append("<goal>testCompile</goal>");
+      _builder.newLine();
+      _builder.append("\t\t\t\t\t\t\t");
+      _builder.append("<goal>xtend-test-install-debug-info</goal>");
       _builder.newLine();
       _builder.append("\t\t\t\t\t\t");
       _builder.append("</goals>");
@@ -1099,7 +1162,7 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
       _builder.append("<artifactId>maven-clean-plugin</artifactId>");
       _builder.newLine();
       _builder.append("\t\t\t\t");
-      _builder.append("<version>2.5</version>");
+      _builder.append("<version>3.1.0</version>");
       _builder.newLine();
       _builder.append("\t\t\t\t");
       _builder.append("<configuration>");
@@ -1107,36 +1170,38 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
       _builder.append("\t\t\t\t\t");
       _builder.append("<filesets>");
       _builder.newLine();
-      _builder.append("\t\t\t\t\t\t");
-      _builder.append("<fileset>");
-      _builder.newLine();
       {
-        Set<Outlet> _set = IterableExtensions.<Outlet>toSet(Collections.<Outlet>unmodifiableList(CollectionLiterals.<Outlet>newArrayList(Outlet.MAIN_XTEND_GEN, Outlet.TEST_XTEND_GEN)));
         final Function1<Outlet, String> _function_2 = (Outlet it_1) -> {
           return this.sourceFolder(it_1);
         };
-        Iterable<String> _map = IterableExtensions.<Outlet, String>map(_set, _function_2);
-        for(final String dir : _map) {
-          _builder.append("\t\t\t\t\t\t\t");
+        Set<String> _set = IterableExtensions.<String>toSet(ListExtensions.<Outlet, String>map(Collections.<Outlet>unmodifiableList(CollectionLiterals.<Outlet>newArrayList(Outlet.MAIN_XTEND_GEN, Outlet.TEST_XTEND_GEN)), _function_2));
+        for(final String dir : _set) {
+          _builder.append("\t\t\t\t\t\t");
+          _builder.append("<fileset>");
+          _builder.newLine();
+          _builder.append("\t\t\t\t\t\t");
+          _builder.append("\t");
           _builder.append("<directory>${basedir}/");
           _builder.append(dir, "\t\t\t\t\t\t\t");
           _builder.append("</directory>");
           _builder.newLineIfNotEmpty();
-          _builder.append("\t\t\t\t\t\t\t");
+          _builder.append("\t\t\t\t\t\t");
+          _builder.append("\t");
           _builder.append("<includes>");
           _builder.newLine();
-          _builder.append("\t\t\t\t\t\t\t");
-          _builder.append("\t");
+          _builder.append("\t\t\t\t\t\t");
+          _builder.append("\t\t");
           _builder.append("<include>**/*</include>");
           _builder.newLine();
-          _builder.append("\t\t\t\t\t\t\t");
+          _builder.append("\t\t\t\t\t\t");
+          _builder.append("\t");
           _builder.append("</includes>");
+          _builder.newLine();
+          _builder.append("\t\t\t\t\t\t");
+          _builder.append("</fileset>");
           _builder.newLine();
         }
       }
-      _builder.append("\t\t\t\t\t\t");
-      _builder.append("</fileset>");
-      _builder.newLine();
       _builder.append("\t\t\t\t\t");
       _builder.append("</filesets>");
       _builder.newLine();
@@ -1146,6 +1211,46 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
       _builder.append("\t\t\t");
       _builder.append("</plugin>");
       _builder.newLine();
+      {
+        boolean _needsTychoBuild_3 = this.getConfig().needsTychoBuild();
+        boolean _not = (!_needsTychoBuild_3);
+        if (_not) {
+          _builder.append("\t\t\t");
+          _builder.append("<plugin>");
+          _builder.newLine();
+          _builder.append("\t\t\t");
+          _builder.append("\t");
+          _builder.append("<groupId>org.apache.maven.plugins</groupId>");
+          _builder.newLine();
+          _builder.append("\t\t\t");
+          _builder.append("\t");
+          _builder.append("<artifactId>maven-surefire-plugin</artifactId>");
+          _builder.newLine();
+          _builder.append("\t\t\t");
+          _builder.append("\t");
+          _builder.append("<version>2.22.1</version>");
+          _builder.newLine();
+          _builder.append("\t\t\t");
+          _builder.append("\t");
+          _builder.append("<configuration>");
+          _builder.newLine();
+          _builder.append("\t\t\t");
+          _builder.append("\t\t");
+          _builder.append("<!-- workaround for https://issues.apache.org/jira/browse/SUREFIRE-1588 -->");
+          _builder.newLine();
+          _builder.append("\t\t\t");
+          _builder.append("\t\t");
+          _builder.append("<useSystemClassLoader>false</useSystemClassLoader>");
+          _builder.newLine();
+          _builder.append("\t\t\t");
+          _builder.append("\t");
+          _builder.append("</configuration>");
+          _builder.newLine();
+          _builder.append("\t\t\t");
+          _builder.append("</plugin>");
+          _builder.newLine();
+        }
+      }
       _builder.append("\t\t\t");
       _builder.append("<plugin>");
       _builder.newLine();
@@ -1166,66 +1271,6 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
       _builder.newLine();
       _builder.append("\t\t\t\t\t\t");
       _builder.append("<pluginExecutions>");
-      _builder.newLine();
-      _builder.append("\t\t\t\t\t\t\t");
-      _builder.append("<pluginExecution>");
-      _builder.newLine();
-      _builder.append("\t\t\t\t\t\t\t\t");
-      _builder.append("<pluginExecutionFilter>");
-      _builder.newLine();
-      _builder.append("\t\t\t\t\t\t\t\t\t");
-      _builder.append("<groupId>");
-      _builder.newLine();
-      _builder.append("\t\t\t\t\t\t\t\t\t\t");
-      _builder.append("org.apache.maven.plugins");
-      _builder.newLine();
-      _builder.append("\t\t\t\t\t\t\t\t\t");
-      _builder.append("</groupId>");
-      _builder.newLine();
-      _builder.append("\t\t\t\t\t\t\t\t\t");
-      _builder.append("<artifactId>");
-      _builder.newLine();
-      _builder.append("\t\t\t\t\t\t\t\t\t\t");
-      _builder.append("maven-resources-plugin");
-      _builder.newLine();
-      _builder.append("\t\t\t\t\t\t\t\t\t");
-      _builder.append("</artifactId>");
-      _builder.newLine();
-      _builder.append("\t\t\t\t\t\t\t\t\t");
-      _builder.append("<versionRange>");
-      _builder.newLine();
-      _builder.append("\t\t\t\t\t\t\t\t\t\t");
-      _builder.append("[2.4.3,)");
-      _builder.newLine();
-      _builder.append("\t\t\t\t\t\t\t\t\t");
-      _builder.append("</versionRange>");
-      _builder.newLine();
-      _builder.append("\t\t\t\t\t\t\t\t\t");
-      _builder.append("<goals>");
-      _builder.newLine();
-      _builder.append("\t\t\t\t\t\t\t\t\t\t");
-      _builder.append("<goal>resources</goal>");
-      _builder.newLine();
-      _builder.append("\t\t\t\t\t\t\t\t\t\t");
-      _builder.append("<goal>testResources</goal>");
-      _builder.newLine();
-      _builder.append("\t\t\t\t\t\t\t\t\t");
-      _builder.append("</goals>");
-      _builder.newLine();
-      _builder.append("\t\t\t\t\t\t\t\t");
-      _builder.append("</pluginExecutionFilter>");
-      _builder.newLine();
-      _builder.append("\t\t\t\t\t\t\t\t");
-      _builder.append("<action>");
-      _builder.newLine();
-      _builder.append("\t\t\t\t\t\t\t\t\t");
-      _builder.append("<ignore></ignore>");
-      _builder.newLine();
-      _builder.append("\t\t\t\t\t\t\t\t");
-      _builder.append("</action>");
-      _builder.newLine();
-      _builder.append("\t\t\t\t\t\t\t");
-      _builder.append("</pluginExecution>");
       _builder.newLine();
       _builder.append("\t\t\t\t\t\t\t");
       _builder.append("<pluginExecution>");
@@ -1294,9 +1339,8 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
       _builder.append("</pluginExecution>");
       _builder.newLine();
       {
-        WizardConfiguration _config_9 = this.getConfig();
-        boolean _needsTychoBuild_2 = _config_9.needsTychoBuild();
-        if (_needsTychoBuild_2) {
+        boolean _needsTychoBuild_4 = this.getConfig().needsTychoBuild();
+        if (_needsTychoBuild_4) {
           _builder.append("\t\t\t\t\t\t\t");
           _builder.append("<pluginExecution>");
           _builder.newLine();
@@ -1472,9 +1516,8 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
       _builder.append("</plugin>");
       _builder.newLine();
       {
-        WizardConfiguration _config_10 = this.getConfig();
-        boolean _needsTychoBuild_3 = _config_10.needsTychoBuild();
-        if (_needsTychoBuild_3) {
+        boolean _needsTychoBuild_5 = this.getConfig().needsTychoBuild();
+        if (_needsTychoBuild_5) {
           _builder.append("\t\t\t");
           _builder.append("<plugin>");
           _builder.newLine();
@@ -1513,6 +1556,67 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
           _builder.append("\t\t\t");
           _builder.append("\t\t");
           _builder.append("<compilerArgument>-err:-forbidden</compilerArgument>");
+          _builder.newLine();
+          _builder.append("\t\t\t");
+          _builder.append("\t\t");
+          _builder.append("<useProjectSettings>false</useProjectSettings>");
+          _builder.newLine();
+          _builder.append("\t\t\t");
+          _builder.append("\t");
+          _builder.append("</configuration>");
+          _builder.newLine();
+          _builder.append("\t\t\t");
+          _builder.append("</plugin>");
+          _builder.newLine();
+          _builder.append("\t\t\t");
+          _builder.append("<!-- to skip running (and compiling) tests use commandline flag: -Dmaven.test.skip");
+          _builder.newLine();
+          _builder.append("\t\t\t");
+          _builder.append("\t");
+          _builder.append("To skip tests, but still compile them, use: -DskipTests");
+          _builder.newLine();
+          _builder.append("\t\t\t");
+          _builder.append("\t");
+          _builder.append("To allow all tests in a pom to pass/fail, use commandline flag: -fae (fail");
+          _builder.newLine();
+          _builder.append("\t\t\t");
+          _builder.append("\t");
+          _builder.append("at end) -->");
+          _builder.newLine();
+          _builder.append("\t\t\t");
+          _builder.append("<plugin>");
+          _builder.newLine();
+          _builder.append("\t\t\t");
+          _builder.append("\t");
+          _builder.append("<groupId>org.eclipse.tycho</groupId>");
+          _builder.newLine();
+          _builder.append("\t\t\t");
+          _builder.append("\t");
+          _builder.append("<artifactId>tycho-surefire-plugin</artifactId>");
+          _builder.newLine();
+          _builder.append("\t\t\t");
+          _builder.append("\t");
+          _builder.append("<version>${tycho-version}</version>");
+          _builder.newLine();
+          _builder.append("\t\t\t");
+          _builder.append("\t");
+          _builder.append("<configuration>");
+          _builder.newLine();
+          _builder.append("\t\t\t");
+          _builder.append("\t\t");
+          _builder.append("<!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->");
+          _builder.newLine();
+          _builder.append("\t\t\t");
+          _builder.append("\t\t");
+          _builder.append("<argLine>${platformSystemProperties} ${systemProperties} ${moduleProperties} ${additionalTestArguments}</argLine>");
+          _builder.newLine();
+          _builder.append("\t\t\t");
+          _builder.append("\t\t");
+          _builder.append("<failIfNoTests>false</failIfNoTests>");
+          _builder.newLine();
+          _builder.append("\t\t\t");
+          _builder.append("\t\t");
+          _builder.append("<useUIHarness>false</useUIHarness>");
           _builder.newLine();
           _builder.append("\t\t\t");
           _builder.append("\t");
@@ -1567,9 +1671,7 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
       _builder.append("</repository>");
       _builder.newLine();
       {
-        WizardConfiguration _config_11 = this.getConfig();
-        XtextVersion _xtextVersion_1 = _config_11.getXtextVersion();
-        boolean _isSnapshot = _xtextVersion_1.isSnapshot();
+        boolean _isSnapshot = this.getConfig().getXtextVersion().isSnapshot();
         if (_isSnapshot) {
           _builder.append("\t");
           _builder.append("<repository>");
@@ -1633,9 +1735,7 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
       _builder.append("</pluginRepository>");
       _builder.newLine();
       {
-        WizardConfiguration _config_12 = this.getConfig();
-        XtextVersion _xtextVersion_2 = _config_12.getXtextVersion();
-        boolean _isSnapshot_1 = _xtextVersion_2.isSnapshot();
+        boolean _isSnapshot_1 = this.getConfig().getXtextVersion().isSnapshot();
         if (_isSnapshot_1) {
           _builder.append("\t");
           _builder.append("<pluginRepository>");
@@ -1661,7 +1761,92 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
           _builder.newLine();
         }
       }
+      {
+        if ((this.getConfig().needsTychoBuild() && this.getTychoVersion().endsWith("-SNAPSHOT"))) {
+          _builder.append("\t");
+          _builder.append("<pluginRepository>");
+          _builder.newLine();
+          _builder.append("\t");
+          _builder.append("\t");
+          _builder.append("<id>tycho-snapshots</id>");
+          _builder.newLine();
+          _builder.append("\t");
+          _builder.append("\t");
+          _builder.append("<url>https://repo.eclipse.org/content/repositories/tycho-snapshots/</url>");
+          _builder.newLine();
+          _builder.append("\t");
+          _builder.append("</pluginRepository>");
+          _builder.newLine();
+        }
+      }
       _builder.append("</pluginRepositories>");
+      _builder.newLine();
+      _builder.append("<profiles>");
+      _builder.newLine();
+      _builder.append("\t");
+      _builder.append("<profile>");
+      _builder.newLine();
+      _builder.append("\t\t");
+      _builder.append("<id>macos</id>");
+      _builder.newLine();
+      _builder.append("\t\t");
+      _builder.append("<activation>");
+      _builder.newLine();
+      _builder.append("\t\t\t");
+      _builder.append("<os>");
+      _builder.newLine();
+      _builder.append("\t\t\t\t");
+      _builder.append("<family>mac</family>");
+      _builder.newLine();
+      _builder.append("\t\t\t");
+      _builder.append("</os>");
+      _builder.newLine();
+      _builder.append("\t\t");
+      _builder.append("</activation>");
+      _builder.newLine();
+      _builder.append("\t\t");
+      _builder.append("<properties>");
+      _builder.newLine();
+      _builder.append("\t\t\t");
+      _builder.append("<!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->");
+      _builder.newLine();
+      _builder.append("\t\t\t");
+      _builder.append("<platformSystemProperties>-XstartOnFirstThread</platformSystemProperties>");
+      _builder.newLine();
+      _builder.append("\t\t");
+      _builder.append("</properties>");
+      _builder.newLine();
+      _builder.append("\t");
+      _builder.append("</profile>");
+      _builder.newLine();
+      _builder.append("\t");
+      _builder.append("<profile>");
+      _builder.newLine();
+      _builder.append("\t\t");
+      _builder.append("<id>jdk9-or-newer</id>");
+      _builder.newLine();
+      _builder.append("\t\t");
+      _builder.append("<activation>");
+      _builder.newLine();
+      _builder.append("\t\t\t");
+      _builder.append("<jdk>[9,)</jdk>");
+      _builder.newLine();
+      _builder.append("\t\t");
+      _builder.append("</activation>");
+      _builder.newLine();
+      _builder.append("\t\t");
+      _builder.append("<properties>");
+      _builder.newLine();
+      _builder.append("\t\t\t");
+      _builder.append("<moduleProperties>--add-modules=ALL-SYSTEM</moduleProperties>");
+      _builder.newLine();
+      _builder.append("\t\t");
+      _builder.append("</properties>");
+      _builder.newLine();
+      _builder.append("\t");
+      _builder.append("</profile>");
+      _builder.newLine();
+      _builder.append("</profiles>");
       _builder.newLine();
       it.setBuildSection(_builder.toString());
     };
@@ -1669,8 +1854,8 @@ public class ParentProjectDescriptor extends ProjectDescriptor {
   }
   
   @Override
-  public Set<String> getSourceFolders() {
-    return Collections.<String>unmodifiableSet(CollectionLiterals.<String>newHashSet());
+  public Set<SourceFolderDescriptor> getSourceFolders() {
+    return Collections.<SourceFolderDescriptor>unmodifiableSet(CollectionLiterals.<SourceFolderDescriptor>newHashSet());
   }
   
   public ParentProjectDescriptor(final WizardConfiguration config) {
